# Darwin_trader

./: CMakeLists.txt  crypto_combined.txt  gene_functions_H.h  gene_resources.cpp  main.cpp  main.h  random_range.cpp  random_range.h  training_data.txt
Matlab/: data_gen.m  data_gen_simp.m  training_data.txt
hashtag-count/: config.json  package-lock.json
hashtag-count/examples/: limited.js  results.txtexit  unlimited.js
hashtag-count/lib/: hashtag-count.js
historical_data/: crypto_combined.txt  crypto_combined.xlsx
measured_data/: crypto_combined_measured.txt  crypto_combined_measured.xlsx
